--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "rules": {
       "no-unused-vars": "off"
     }
-
   },
   "browserslist": {
     "production": [
@@ -52,11 +51,14 @@
     "autoprefixer": "^10.4.2",
     "eslint": "^8.9.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.28.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "^8.4.6",
+    "prettier": "^3.4.2",
     "tailwindcss": "^3.0.19"
   }
 }
