--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@syncfusion/ej2-react-richtexteditor": "^28.1.37",
     "@syncfusion/ej2-react-schedule": "^28.1.37",
     "cra-template": "1.2.0",
+    "process": "^0.11.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
