--- a/package.json
+++ b/package.json
@@ -3,23 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@syncfusion/ej2": "^28.1.37",
-    "@syncfusion/ej2-react-calendars": "^28.1.37",
-    "@syncfusion/ej2-react-charts": "^28.1.37",
-    "@syncfusion/ej2-react-dropdowns": "^28.1.37",
-    "@syncfusion/ej2-react-grids": "^28.1.37",
-    "@syncfusion/ej2-react-inputs": "^28.1.37",
-    "@syncfusion/ej2-react-kanban": "^28.1.37",
-    "@syncfusion/ej2-react-popups": "^28.1.33",
-    "@syncfusion/ej2-react-richtexteditor": "^28.1.37",
-    "@syncfusion/ej2-react-schedule": "^28.1.37",
-    "cra-template": "1.2.0",
+    "@babel/plugin-transform-class-properties": "^7.25.9",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.26.6",
+    "@babel/plugin-transform-numeric-separator": "^7.25.9",
+    "@babel/plugin-transform-optional-chaining": "^7.25.9",
+    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
+    "@eslint/config-array": "^0.19.2",
+    "@jridgewell/sourcemap-codec": "^1.5.0",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@syncfusion/ej2": "^28.2.6",
+    "@syncfusion/ej2-react-calendars": "^28.2.3",
+    "@syncfusion/ej2-react-charts": "^28.2.6",
+    "@syncfusion/ej2-react-dropdowns": "^28.2.6",
+    "@syncfusion/ej2-react-grids": "^28.2.6",
+    "@syncfusion/ej2-react-inputs": "^28.2.3",
+    "@syncfusion/ej2-react-kanban": "^28.2.3",
+    "@syncfusion/ej2-react-popups": "^28.2.6",
+    "@syncfusion/ej2-react-richtexteditor": "^28.2.6",
+    "@syncfusion/ej2-react-schedule": "^28.2.6",
+    "abab": "^2.0.6",
+    "cra-template": "^1.3.0",
+    "glob": "^11.0.1",
+    "lru-cache": "^11.0.2",
     "process": "^0.11.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.1",
-    "react-scripts": "5.0.1"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.2.0",
+    "react-scripts": "^5.0.1",
+    "rimraf": "^6.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,7 +61,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.9.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -58,7 +69,7 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "postcss": "^8.4.6",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.0.19"
