--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,10 +14,10 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x, 22.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+#    strategy:
+#      matrix:
+#        node-version: [18.x, 20.x, 22.x]
+#        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v4
@@ -26,7 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm install
-    - run: npm run build --if-present
-    - run: npm test
+    - name: Install Dependencies
+      run: npm install
+    - name: Build
+      run: npm run build
